Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-01-01 (SVN):
    * timidity: Added /usr/local/share/timidity to the list of default
      paths.

2012-01-01 (SVN):
    * timidity, readmidi.c: Fixed parsing of certain MIDI files with
      extra data at the end of the tracks. Fix from SDL_mixer mercurial
      repository, changeset 7a8f0018e23d. The problem was described in
      libsdl bugzilla, http://bugzilla.libsdl.org/show_bug.cgi?id=1299

2012-01-01 (SVN):
    * timidity: Added mid_istream_seek and mid_istream_tell to the api.

2012-01-01 (SVN):
    * timidity: Added seek and tell functions to the _MidIStream struct.
    * snd_timidity.c: Adjusted for the new api change made in timidity.

2012-01-01 (SVN):
    * libs/timidity: Made some functions and variables static. Commented
      out unused PrintRIFF and PrintDLS functions. Consistent whitespace
      usage.

2012-01-01 (SVN):
    * hexen2 menu.c: Use the original credits strings and don't play the
      easter egg cd track 12 when the expansion pack is not active.

2012-01-01 (SVN):
    * hexenworld menu.c: One of the string lines in the Credits2Text was
      missing a comma therefore it was concatanated with the next one
      and making the array one less in size than expected. If one waited
      long enough for the full credits to be printed, that used to cause
      a segmentation fault. Fixed.
    * quakedef.h: updated beta date stamp to 2012-01-01.

2011-12-31 (SVN):
    * changed some of the Cvar_Set[Value] calls to their *Quick variants
      in the source files where the vars are defined.
    * quakedef.h: updated beta date stamp to 2011-12-31.

2011-12-28 (SVN):
    * cvar.c (Cvar_SetQuick): Put back the tweak of reusing the string
      buffer when the old and new sizes are the same.

2011-12-28 (SVN):
    * Removed AoT from web links in the README files. The address is not
      related to Anvil of Thyrion anymore.

2011-12-28 (SVN):